--- a/static/js/index.html
+++ b/static/js/index.html
@@ -40,11 +40,7 @@ button {
 <div class="container p-4 flex flex-col gap-4">
 
 <div class="flex gap-2">
-    <div class="light">5</div>
-    <div class="light">4</div>
-    <div class="light">1</div>
-    <div class="light">3</div>
-    <div class="light">2</div>
+    <div class="flex gap-2" id="lights"></div>
     <div class="flex-1"></div>
     <button id="live">live</button>
     <button id="state">state</button>
