--- a/static/js/index.html
+++ b/static/js/index.html
@@ -47,7 +47,7 @@ button {
     <button id="dump">dump</button>
 </div>
 
-<div id="control" class="w-full aspect-video rounded-lg"></div>
+<div id="control" class="w-full aspect-[4/1] rounded-lg"></div>
 
 <div class="flex flex-col">
     <div class="flex gap-2">
@@ -57,6 +57,9 @@ button {
     </div>
 </div>
 
+
+<pre id="stats" class="text-xs">
+</pre>
 <pre id="log" class="w-full aspect-video overflow-auto text-xs">
 </pre>
 
