Adds rolling canvas to server2.

--- a/py/static/index.html
+++ b/py/static/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
+
+<style>
+body {
+  background: #444;
+  color: #ddd;
+}
+#data {
+  font-family: monospace;
+  white-space: pre;
+}
+canvas {
+  display: block;
+  height: 40vh;
+  width: 100%;
+}
+</style>
+
 <title>UDP Data Stream</title>
-<h1>UDP Data Stream</h1>
 <div id="data"></div>
+<canvas id="canvas"></canvas>
+
 <script>
+
+// NETWORKING
 
 function websocket() {
   const protocol = {
@@ -14,19 +34,84 @@ function websocket() {
 const ws = websocket();
 const dataDiv = document.getElementById('data');
 
+let lastData = null, lastT = null, lastDt = null;
 ws.onmessage = async function(event) {
   const data = new Float32Array(await event.data.arrayBuffer());
   dataDiv.textContent = Array.from(data).map(n => n.toFixed(3)).join(', ');
+  lastData = data;
+  const t = performance.now();
+  if (lastT) lastDt = t - lastT;
+  lastT = t;
 };
 
 ws.onclose = function() {
   dataDiv.textContent = 'Connection closed';
 };
-</script>
 
-<style>
-#data {
-  font-family: monospace;
-  white-space: pre;
+// DRAWING
+
+const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d', { alpha: false });
+
+const offscreenCanvas = document.createElement('canvas');
+const offscreenCtx = offscreenCanvas.getContext('2d', { alpha: false });
+
+function resizeCanvas() {
+  const width = canvas.parentElement.clientWidth;
+  const height = canvas.height;
+  canvas.width = width;
+  offscreenCanvas.width = canvas.width;
+  offscreenCanvas.height = canvas.height;
+
+  ctx.fillStyle = 'black';
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+  offscreenCtx.fillStyle = 'black';
+  offscreenCtx.fillRect(0, 0, canvas.width, canvas.height);
 }
-</style>
+
+resizeCanvas();
+window.addEventListener('resize', resizeCanvas);
+
+function getNewData() {
+  return Math.random() * canvas.height;
+}
+
+function draw(timestamp) {
+
+  offscreenCtx.drawImage(canvas, 0, 0);
+
+  ctx.fillStyle = 'black';
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+  ctx.drawImage(offscreenCanvas,
+      1, 0, canvas.width - 1, canvas.height,  // src
+      0, 0, canvas.width - 1, canvas.height,  // dst
+  );
+
+  const x = canvas.width - 1;
+  function set(y, color) {
+    ctx.strokeStyle = color;
+    ctx.beginPath();
+    ctx.moveTo(x, y - 1);
+    ctx.lineTo(x, y + 1);
+    ctx.stroke();
+  }
+
+  if (lastData) {
+    const [gx, gy, ..._] = lastData;
+    const norm = y => Math.floor((y / 20 + 0.5) * canvas.height);
+    set(norm(gx), 'red');
+    set(norm(gy), 'green');
+  }
+  if (lastDt) {
+    const norm = y => Math.floor((y / 100) * canvas.height);
+    const clip = y => Math.max(5, Math.min(canvas.height, y));
+    set(clip(norm(lastDt)), 'white');
+  }
+
+  requestAnimationFrame(draw);
+}
+
+requestAnimationFrame(draw);
+
+</script>
