Adds scale.js + @ts-check.

--- a/py/static/index.html
+++ b/py/static/index.html
@@ -14,10 +14,16 @@ canvas {
   height: 40vh;
   width: 100%;
 }
+#scalers {
+  display: flex;
+  gap: 1em;
+  font-family: monospace;
+}
 </style>
 
 <title>UDP Data Stream</title>
 <div id="data"></div>
 <canvas id="canvas"></canvas>
+<div id="scalers"></div>
 
 <script type="module" src="./main.js"></script>
