--- a/py/static/index.html
+++ b/py/static/index.html
@@ -2,7 +2,7 @@
 
 <style>
 body {
-  background: #444;
+  background: #222;
   color: #ddd;
 }
 #data {
@@ -19,6 +19,7 @@ canvas {
   display: flex;
   gap: 1em;
   font-family: monospace;
+  white-space: pre;
 }
 </style>
 
