--- a/py/static/index.html
+++ b/py/static/index.html
@@ -21,10 +21,17 @@ canvas {
   font-family: monospace;
   white-space: pre;
 }
+.state-manager {
+  display: flex;
+  gap: 2em;
+  font-family: monospace;
+  align-items: center;
+}
 </style>
 
 <title>UDP Data Stream</title>
 <div id="data"></div>
+<div id="state"></div>
 <canvas id="canvas"></canvas>
 <div id="scalers"></div>
 
