--- a/py/static/index.html
+++ b/py/static/index.html
@@ -5,8 +5,10 @@ body {
   font-family: monospace;
   background: #222;
   color: #ddd;
+  padding-bottom: 100vh;
 }
 #data {
+  background: black;
   white-space: pre;
 }
 canvas {
@@ -20,6 +22,7 @@ canvas {
   white-space: pre;
 }
 .state-manager {
+  background: black;
   display: flex;
   gap: 2em;
   align-items: center;
