--- a/py/static/index.html
+++ b/py/static/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="utf8">
 
 <style>
 body {
@@ -39,8 +40,8 @@ body {
 <title>UDP Data Stream</title>
 <div id="help">
   alpha: immediate update (1.0) ... exponential averaging (&lt;1.0)<br>
-  algorithm=xy_hue: absolute z rotation wrt gravity<br>
-  algorithm=z_rot: param1 sensitivity, param2 thresold<br>
+  algorithm=gx_gy: absolute z rotation wrt gravity<br>
+  algorithm=z_rot: relative z rotation – param1 sensitivity, param2 thresold<br>
 </div>
 <div id="state"></div>
 <div id="plots"></div>
