Adds logs in UI.

--- a/py/static/index.html
+++ b/py/static/index.html
@@ -36,6 +36,13 @@ body {
     white-space: pre;
   }
 }
+#logs {
+  margin-top: 2em;
+  background: #444;
+  height: 8em;
+  max-height: 8em;
+  overflow: scroll;
+}
 </style>
 
 <title>UDP Data Stream</title>
@@ -47,5 +54,6 @@ body {
 </div>
 <div id="state"></div>
 <div id="plots"></div>
+<div id="logs"></div>
 
 <script type="module" src="./main.js"></script>
