--- a/py/static/index.html
+++ b/py/static/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<head>
+<title>Pantone</title>
 <meta charset="utf8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=0">
+</head>
 
 <style>
 body {
